# img_similar

./: .gitignore  CMakeLists.txt  LICENSE  PythonToOpenCV.cpp  PythonToOpenCV.h  README.md  img_similar.cpp  img_similar.h  libimg_similar.cpp  libimg_similar.h  main.cpp  test.py
